[package]
name = "mesh_analyzer"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick_renderer = { git = "ssh://git@github.com/ishbosamiya/quick_renderer.git" }

[patch."ssh://git@github.com/ishbosamiya/quick_renderer.git"]
quick_renderer = { path = "../../../quick_renderer/" }