[package]
name = "mesh_analyzer"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick_renderer = { git = "ssh://git@github.com/ishbosamiya/quick_renderer.git" }
rmp-serde = "0.15"
serde = { version = "1.0", features = ["derive"] }
generational-arena = "0.2"
lazy_static = "1.4"
num-traits = "0.2"
itertools = "0.10"
serde_path_to_error = "0.1"
serde_json = "1.0"

[patch."ssh://git@github.com/ishbosamiya/quick_renderer.git"]
quick_renderer = { path = "../../../quick_renderer/" }